--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <script src="p5.js"></script>
     <script src="p5.dom.min.js"></script>
     <script src="p5.sound.min.js"></script>
-    <script src="./p5.play.js"></script>
-    <script src="./p5.play.js"></script>
+  //  <script src="./p5.play.js"></script>
+    //<script src="./p5.play.js"></script>
     <script src="matter.js"></script>
     <script src="Log.js"></script>
     <script src="Ball.js"></script>
